# prometheus-vla

./: .gitignore  .gitmodules  ambiente.md  config.ini  dex3_g1_server_v2.py  eval_calvin_pi05_arch.py  eval_humanoid_everyday.py  eval_probes.py  eval_probes_real.py  eval_sim_harness.py  eval_sim_sweep.py  inference_realtime_pi05d.py  inference_sim_pi05d.py  init_prometheus-vla.sh  install.sh  pyproject.toml  realsense_server.py  requirements.txt  requirements_clean.txt  reset_camera.py  run_on_robot.sh  run_stream.py
ambiente/: ambiente.md
docs/: g1_async_inference_atena.md
lerobot-ext/: README.md  analise_dataset.py  cert.pem  environment.yml  fake_joystick.py  g1_29_model_cache.pkl  init_lerobot_inference.py  init_lerobot_inference_v2.py  init_lerobot_play.py  init_lerobot_record.py  init_lerobot_record_v2.py  init_lerobot_teleoparate.py  init_lerobot_teleoparate_v2.py  init_lerobot_train.py  init_lerobot_train2.py  init_lerobot_train_v2.py  init_lerobot_train_v3.py  init_lerobot_viz.py  key.pem  lib_ambiente.md  plot_dex3_sensores.py  pointcloud.py  pressure.py  ver.py  ver_dataset.py  ver_prof.py
lerobot-ext/tracelr/: .gitignore  Cargo.toml  README.md  build.rs
lerobot-ext/tracelr/configs/: prompts.example.yaml
lerobot-ext/tracelr/src/: annotation.rs  app.rs  build_info.rs  cache.rs  dataset.rs  grid.rs  main.rs  perf.rs  playback.rs  theme.rs  trajectory.rs  trajectory_view.rs  video.rs
lerobot-ext/tracelr/src/ui/: input.rs  mod.rs  panels.rs
scripts/: convert_calvin_to_lerobot.py  visualize_depth_video.py
train/: build_cotraining_dataset.py  (+1 more)
(+132 files in other folders)
