[project]
name = "prometheus-vla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "lerobot[unitree_g1_dex3,televuer,intelrealsense,pi]",
    "vuer>=0.1.1",
]

[tool.uv.sources]
lerobot = { path = "lerobot", editable = true }
