[package]
name = "tracelr"
version = "0.1.0"
edition = "2021"
description = "A fast desktop tool for exploring and tracing LeRobot datasets"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = "0.31"
ffmpeg-next = { version = "8", default-features = false, features = ["format", "software-scaling"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
parquet = "55"
arrow = { version = "55", default-features = false }
k = "0.32"
urdf-rs = "0.8"

[build-dependencies]
chrono = "0.4"

[profile.opt-dev]
inherits = "release"
opt-level = 3
lto = false
codegen-units = 16
